# stl-gallery-rs

./: .gitignore  Cargo.toml  README.md  SKILL.md  install.sh  readme_minimal.md
src/: camera.rs  main.rs  parser.rs  renderer.rs
