[package]
name = "stl-gallery-rs"
version = "0.1.0"
edition = "2021"
description = "Headless STL → PNG gallery generator"

[dependencies]
anyhow    = "1"
bytemuck  = { version = "1.16", features = ["derive"] }
clap      = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
glam      = { version = "0.29", features = ["bytemuck"] }
image     = { version = "0.25", default-features = false, features = ["png"] }
pollster  = "0.4"
stl_io    = "0.8"
wgpu      = "22"

[profile.release]
lto = "thin"
codegen-units = 1
